cros: Don't reposition login bubbles vertically.

Previously we prevented the login bubbles from overlapping into the shelf.
This had some annoying side effects like obscuring the password field. This
CL removes that part of the widget repositioning logic.

A future CL will address the potential case of login bubbles going off screen
on the bottom. Need to clarify the correct UX for this case.

Bug: 880224, 875787
Change-Id: Iea42cd612e9b0c57516fdc9681843182fa8d268b
Reviewed-on: https://chromium-review.googlesource.com/1217742
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#590087}(cherry picked from commit d63f209d7835467ed119275b7c319a19991c57fe [formerly 593f022c3388819e053d6426dda7f4d84d62145d])
Reviewed-on: https://chromium-review.googlesource.com/1222747
Cr-Commit-Position: refs/branch-heads/3538@{#346}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 1736d324df7607dfb737daeff789ff7fc2c8b687